--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "dayjs": "^1.8.34",
+    "firebase": "^7.19.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vuefire": "^2.2.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
