--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "dayjs": "^1.8.34",
     "firebase": "^7.19.1",
+    "vee-validate": "^3.3.11",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuefire": "^2.2.4"
